--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
   
     
   
-<meta name="description" content="Thanks for visiting! I am Associate Professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how people form and change attitudes about politics. I teach courses on data analysis and research design.">
+<meta name="description" content="Thanks for visiting! I am a political science professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how political attitudes form and change over time. I teach courses on data analysis and research design.">
 
 
 <meta property="og:site_name" content="Austin Hart">
 <meta property="og:title" content="Austin Hart">
-<meta property="og:description" content="Thanks for visiting! I am Associate Professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how people form and change attitudes about politics. I teach courses on data analysis and research design." />
+<meta property="og:description" content="Thanks for visiting! I am a political science professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how political attitudes form and change over time. I teach courses on data analysis and research design." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://localhost:4321/" />
 <meta property="og:locale" content="en">
@@ -39,7 +39,7 @@
 <meta name="twitter:card" content="summary_large_image"/><meta name="twitter:image" content="http://localhost:4321/img/banner.webp"/>
 
   <meta itemprop="name" content="Austin Hart">
-<meta itemprop="description" content="Thanks for visiting! I am Associate Professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how people form and change attitudes about politics. I teach courses on data analysis and research design.">
+<meta itemprop="description" content="Thanks for visiting! I am a political science professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how political attitudes form and change over time. I teach courses on data analysis and research design.">
   
   <!--[if IE]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <link rel="shortcut icon" href="/img/ah.png" type="image/x-icon">
@@ -145,7 +145,7 @@
   
 </div>
 
-        <p class="f4 mt4 lh-copy">Thanks for visiting! I am Associate Professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how people form and change attitudes about politics. I teach courses on data analysis and research design.</p>
+        <p class="f4 mt4 lh-copy">Thanks for visiting! I am a political science professor in the Department of Politics, Governance, and Economics at American University. I study democratic accountability and how political attitudes form and change over time. I teach courses on data analysis and research design.</p>
         <a class="mt4 action text" href="/about">Read More &rarr;</a>
       </div>
       <div class="tr w-50-l ml4">
