--- a/public/courses/sis600/index.html
+++ b/public/courses/sis600/index.html
@@ -165,12 +165,9 @@
   
   
     <a class="prev dtc pr2 tl v-top fw6"
-    href="http://localhost:4321/courses/sis750/">&larr; SIS-750</a>
+    href="http://localhost:4321/courses/sis306/">&larr; SISU-306</a>
   
   
-  
-    <a class="next dtc pl2 tr v-top fw6"
-    href="http://localhost:4321/courses/sis806/">SIS-806 &rarr;</a>
   
 </div>
 
